--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                       </label>
                       <input type="text" class="form-control" id="city-search">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-lg">Search Cities</button>
+                    <button type="submit" class="btn btn-primary btn-lg" id="search-button">Search Cities</button>
                   </form>
                   <div class="dropdown-divider mt-4"></div>
                   <div id="previous-search-container" class="align-items-center">
@@ -35,10 +35,35 @@
                   </div>
             </div>
             <div class="col-9" id="results-column">
-
+                <div class="jumbotron jumbontron-fluid bg-info text-light m-4">
+                    <h2 class="d-inline">Placeholder title (Placeholder date) </h2>
+                    <img class="d-inline" src="http://openweathermap.org/img/wn/10d@2x.png">
+                </div>
+                <h2>5 Day Forecast:</h2>
+                <div class="d-flex row m-4 justify-content-between">
+                  <div class="col bg-info m-2 text-light">
+                    <h3 class="d-inline">date</h3>
+                    <img class="d-inline" src="http://openweathermap.org/img/wn/10d@2x.png">
+                    <h5>temp</h5>
+                    <h5>wind</h5>
+                    <h5>humidity</h5>
+                  </div>
+                  <div class="col bg-info m-2">
+                    Test2
+                  </div>
+                  <div class="col m-2">
+                    Test3
+                  </div>
+                  <div class="col m-2">
+                    Test4
+                  </div>
+                  <div class="col m-2">
+                    Test5
+                  </div>
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="/script.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
