dynamic element creation, local storage functionality

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                   </form>
                   <div class="dropdown-divider mt-4"></div>
                   <div id="previous-search-container" class="align-items-center">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Placeholder City</button>
+                    <!-- <button type="submit" class="btn btn-primary btn-lg btn-block">Placeholder City</button> -->
                   </div>
             </div>
             <div class="col-9" id="results-column">
-                <div class="jumbotron jumbontron-fluid bg-info text-light m-4">
-                    <h2 class="d-inline">Placeholder title (Placeholder date) </h2>
-                    <img class="d-inline" src="http://openweathermap.org/img/wn/10d@2x.png">
+                <div class="jumbotron jumbontron-fluid bg-info text-light m-4" id="main-container">
+                    <!-- <h2 class="d-inline">Placeholder title (Placeholder date) </h2>
+                    <img class="d-inline" src="http://openweathermap.org/img/wn/10d@2x.png"> -->
                 </div>
-                <h2>5 Day Forecast:</h2>
-                <div class="d-flex row m-4 justify-content-between">
-                  <div class="col bg-info m-2 text-light">
+                <h2 class="text-light">5 Day Forecast:</h2>
+                <div class="d-flex row m-4 justify-content-between" id="5day-container">
+                  <!-- <div class="col bg-info m-2 text-light">
                     <h3 class="d-inline">date</h3>
-                    <img class="d-inline" src="http://openweathermap.org/img/wn/10d@2x.png">
+                    <img class="d-inline" src="http://openweathermap.org/img/wn/10d.png">
                     <h5>temp</h5>
                     <h5>wind</h5>
                     <h5>humidity</h5>
@@ -59,7 +59,7 @@
                   </div>
                   <div class="col m-2">
                     Test5
-                  </div>
+                  </div> -->
                 </div>
             </div>
         </div>
